--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "react-app",
   "version": "1.0.0",
   "description": "",
+  "private":false,
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --hot"
+    "start": "webpack-dev-server  --port 3000 --hot --host 0.0.0.0"
   },
   "author": "",
   "license": "ISC",
